--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0/dist/web.js';
 
                 Typebot.initStandard({
-                    typebot: "climaflow",
-                    apiHost: "https://bot.settebyte.com",
+                    typebot: "climaflow-webchat",
+                    apiHost: "https://api-typebot.settebyte.com",
                 });
             </script>
             <typebot-standard style="width: 100%; height: 85vh; "></typebot-standard>
